# Orchestration_Management_System

orchestration_management/: README.md  pyproject.toml
orchestration_management/checkout/: order_a1598e1b-8c76-4a80-9363-def70dbbf7e1.csv  order_a1598e1b-8c76-4a80-9363-def70dbbf7e1.txt  order_f22516b0-ffac-46a5-86e6-7000ae281c17.csv  order_f22516b0-ffac-46a5-86e6-7000ae281c17.txt
orchestration_management/src/orchestration_management/: main.py
orchestration_management/src/orchestration_management/crews/shop_crew/: Shop_crew.py
orchestration_management/src/orchestration_management/crews/shop_crew/config/: agents.yaml  tasks.yaml
